--- a/.github/workflows/actions_release.yml
+++ b/.github/workflows/actions_release.yml
@@ -16,6 +16,6 @@ jobs:
       actions: read
       id-token: write
       contents: write
-    uses: step-security/reusable-workflows/.github/workflows/actions_release.yaml@v1
+    uses: step-security/reusable-workflows/.github/workflows/actions_release.yaml@feature/Add-PrevTag-In-Action-Release
     with:
       tag: "${{ github.event.inputs.tag }}"
